feat: implement roles-based authorization for the system